--- a/glass.css
+++ b/glass.css
@@ -24,12 +24,12 @@
 
 /* Glassmorphism card effect */
 .card {
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(125, 181, 255, 0.75);
+    backdrop-filter: blur(5px) saturate(180%);
+    -webkit-backdrop-filter: blur(5px) saturate(180%);
+    background-color: rgba(125, 181, 255, 0.411);
     background-image: 
-    radial-gradient(at 10% 00%, rgb(146, 1, 151) 0, transparent 60%), 
-    radial-gradient(at 90% 95%, rgb(255, 199, 13) 0, transparent 60%);
+    radial-gradient(at 10% 00%, rgba(146, 1, 151, 0.753) 0, transparent 60%), 
+    radial-gradient(at 90% 95%, rgba(255, 199, 13, 0.74) 0, transparent 60%);
     border-radius: 50px;
     border: 1px solid rgba(209, 213, 219, 0.3);
     height: 1130px;
@@ -139,6 +139,7 @@
     border-color:rgba(68, 134, 255, 0.322) transparent transparent transparent;
     border-radius: 80%/500px 500px 0 0;
     transform: rotate(-125deg);
+    z-index: -1;
   }
 
   .box.number2 {
